<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/inputTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:textAlignment="textEnd"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/inputTextView"
            android:maxLines="1"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:textAlignment="textEnd"
            android:textColor="@color/colorTeal"
            android:textSize="30sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonOne"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_number"
                android:text="@string/number_one"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonTwo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_number"
                android:text="@string/number_two"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonThree"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_number"
                android:text="@string/number_three"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonPlus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_action"
                android:text="@string/action_plus"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonFour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_number"
                android:text="@string/number_four"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonFive"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_number"
                android:text="@string/number_five"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonSix"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_number"
                android:text="@string/number_six"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonMinus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_action"
                android:text="@string/action_minus"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonSeven"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_number"
                android:text="@string/number_seven"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonEight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_number"
                android:text="@string/number_eight"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonNine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_number"
                android:text="@string/number_nine"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonMultiply"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_action"
                android:text="@string/action_multiply"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonClear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_action"
                android:text="@string/action_clear"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonZero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_number"
                android:text="@string/number_zero"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonEqual"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_action"
                android:text="@string/action_equal"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonDivide"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_action"
                android:text="@string/action_divide"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textStyle="bold" />

        </TableRow>

    </TableLayout>

</LinearLayout>
